Tolta la seconda schermata di login